--- a/views/corporateProfile.ejs
+++ b/views/corporateProfile.ejs
@@ -68,12 +68,15 @@
           <h2>Corporate Specialties</h2>
           <% if (corporate.corporateSpecialties && corporate.corporateSpecialties.length > 0) { %>
             <div class="specialties-list">
-              <% corporate.corporateSpecialties.forEach(specialty => { %>
+              <% corporate.corporateSpecialties.forEach((specialty, index) => { %>
                 <div class="specialty-item">
                   <% if (specialty.image && specialty.image.data) { %>
                     <img src="data:<%= specialty.image.contentType %>;base64,<%= specialty.image.data.toString('base64') %>" alt="<%= specialty.name %>" style="max-width: 100px; height: auto;">
                   <% } %>
                   <p><strong><%= specialty.name %></strong></p>
+                  <form action="/corporate/remove-specialty/<%= index %>" method="POST" style="margin-top: 10px;">
+                    <button type="submit" class="btn btn-danger">Remove</button>
+                  </form>
                 </div>
               <% }); %>
             </div>
@@ -81,6 +84,7 @@
             <p>No specialties added yet.</p>
           <% } %>
         </div>
+        
         
 
         <div class="add-specialty">
